--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@
       <div class="rounded-2xl shadow-xl overflow-hidden fade-in" style="animation-delay: 0.1s;">
         <img
           src="https://drive.google.com/uc?export=view&id=12j-FUTfkoW3V95tseSsCDwUTP1ebxs0C"
+         referrerpolicy="no-referrer"
+
           alt="Photo 1"
           class="w-full aspect-[4/3] object-cover"
         />
@@ -266,7 +268,9 @@
       <div class="rounded-2xl shadow-xl overflow-hidden fade-in" style="animation-delay: 0.2s;">
         <img
           src="https://drive.google.com/uc?export=view&id=1T0Qm7sp-fVq_q81Hh9t-ToYzD5Gu43jz"
-          alt="Photo 2"
+         referrerpolicy="no-referrer"
+
+           alt="Photo 2"
           class="w-full aspect-[4/3] object-cover"
         />
         <div class="p-6" id="photo2-caption-container">
@@ -280,6 +284,8 @@
       <div class="rounded-2xl shadow-xl overflow-hidden fade-in" style="animation-delay: 0.3s;">
         <img
           src="https://drive.google.com/uc?export=view&id=1hk9waBiVfGmDV-51Zgjuwhi1NErjJ-U0"
+         referrerpolicy="no-referrer"
+
           alt="Photo 3"
           class="w-full aspect-[4/3] object-cover"
         />
@@ -294,6 +300,8 @@
       <div class="rounded-2xl shadow-xl overflow-hidden fade-in" style="animation-delay: 0.4s;">
         <img
           src="https://drive.google.com/uc?export=view&id=1jq-m85T_wXDxVb9gxla-Ie3Cd1vzFeV_"
+         referrerpolicy="no-referrer"
+
           alt="Photo 4"
           class="w-full aspect-[4/3] object-cover"
         />
@@ -763,4 +771,5 @@
     onConfigChange(config);
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c0e6e5cf2653f7f',t:'MTc2ODkxMDYzMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+
 </html>
