--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <!-- PHOTO 1 -->
       <div class="rounded-2xl shadow-xl overflow-hidden fade-in" style="animation-delay: 0.1s;">
         <div class="photo-box">
-          <img src="./images/IMG-20250914-WA0072.jpg" alt="Photo 1">
+          <img src="./images/1.jpg" alt="Photo 1">
         </div>
         <div class="p-6" id="photo1-caption-container">
           <p class="font-elegant text-xl text-center" id="photo1-caption">
@@ -280,7 +280,7 @@
       <!-- PHOTO 2 -->
       <div class="rounded-2xl shadow-xl overflow-hidden fade-in" style="animation-delay: 0.2s;">
         <div class="photo-box">
-          <img src="./images/IMG-20251103-WA0066.jpg" alt="Photo 2">
+          <img src="./images/2.jpg" alt="Photo 2">
         </div>
         <div class="p-6" id="photo2-caption-container">
           <p class="font-elegant text-xl text-center" id="photo2-caption">
@@ -292,7 +292,7 @@
       <!-- PHOTO 3 -->
       <div class="rounded-2xl shadow-xl overflow-hidden fade-in" style="animation-delay: 0.3s;">
         <div class="photo-box">
-          <img src="./images/IMG-20251227-WA0031.jpg" alt="Photo 3">
+          <img src="./images/3.jpg" alt="Photo 3">
         </div>
         <div class="p-6" id="photo3-caption-container">
           <p class="font-elegant text-xl text-center" id="photo3-caption">
@@ -304,7 +304,7 @@
       <!-- PHOTO 4 -->
       <div class="rounded-2xl shadow-xl overflow-hidden fade-in" style="animation-delay: 0.4s;">
         <div class="photo-box">
-          <img src="./images/IMG_20251031_085631_262.jpg" alt="Photo 4">
+          <img src="./images/4.jpg" alt="Photo 4">
         </div>
         <div class="p-6" id="photo4-caption-container">
           <p class="font-elegant text-xl text-center" id="photo4-caption">
@@ -776,5 +776,6 @@
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c0e6e5cf2653f7f',t:'MTc2ODkxMDYzMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 
 </html>
+
 
 
