Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Will You be my Valentine?</title>
+  <title>ChalHattGareeb</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="/_sdk/element_sdk.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&amp;family=Great+Vibes&amp;family=Cormorant+Garamond:wght@400;600&amp;display=swap" rel="stylesheet">
@@ -206,7 +206,7 @@
   <div id="app" class="h-full w-full overflow-auto"><!-- Page 1: Envelope -->
    <div id="page1" class="page active min-h-full w-full flex flex-col items-center justify-center p-6">
     <div class="text-center mb-8 fade-in">
-     <h1 class="font-script text-6xl mb-4 glow-text" id="page1-title">For My Goddess</h1>
+     <h1 class="font-script text-6xl mb-4 glow-text" id="page1-title">For My Princess</h1>
      <p class="font-serif text-xl opacity-80" id="page1-subtitle">Something magical awaits you...</p>
     </div>
     <div class="envelope-hover cursor-pointer" id="envelope" onclick="openEnvelope()">
@@ -231,11 +231,11 @@
        <svg width="60" height="60" viewbox="0 0 24 24" class="heart-pulse"><path fill="#ec4899" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
        </svg>
       </div>
-      <h2 class="font-script text-5xl mb-2" id="letter-greeting">My Dearest Love</h2>
+      <h2 class="font-script text-5xl mb-2" id="letter-greeting">My Love</h2>
      </div>
      <div class="space-y-6">
-      <p class="font-serif text-lg leading-relaxed" id="letter-message">From the moment I met you, my world became brighter. Your smile lights up my darkest days, your laughter is my favorite melody, and your love is my greatest treasure. Every second with you feels like a beautiful dream I never want to wake up from.</p>
-      <p class="font-serif text-lg leading-relaxed">You've shown me what true love means - it's in the little moments, the quiet conversations, the shared dreams, and the way you hold my hand through everything.</p>
+      <p class="font-serif text-lg leading-relaxed" id="letter-message">In just a few months, you’ve become such an important part of my life. You complete me in ways I didn’t even realize I was missing. When you’re not around, things feel quieter, a little emptier — and when you are, everything feels right again.</p>
+      <p class="font-serif text-lg leading-relaxed">You bring comfort,laughter,and meaning into my days.Being with you feels natural,safe,and real,and that’s what makes it so special.I don’t need big moments with you — even the simple ones mean everything to me.</p>
       <p class="font-serif text-lg leading-relaxed italic">I have something special to show you... Keep going to discover our beautiful journey together.     </p>
      </div>
      <div class="mt-10 text-center"><button onclick="nextPage()" class="font-serif px-8 py-4 rounded-full shadow-lg hover:shadow-xl transition-all text-lg font-semibold" id="letter-button"> Continue Our Story → </button>
@@ -272,7 +272,7 @@
         </div>
         <div class="p-6" id="photo1-caption-container">
           <p class="font-elegant text-xl text-center" id="photo1-caption">
-            Our first date - the moment I knew you were special
+            Our first meet - the moment I knew you were special
           </p>
         </div>
       </div>
@@ -284,7 +284,7 @@
         </div>
         <div class="p-6" id="photo2-caption-container">
           <p class="font-elegant text-xl text-center" id="photo2-caption">
-            The day I realized I was falling in love
+            Our Late Night Talks
           </p>
         </div>
       </div>
@@ -296,7 +296,7 @@
         </div>
         <div class="p-6" id="photo3-caption-container">
           <p class="font-elegant text-xl text-center" id="photo3-caption">
-            My favorite moment - your smile that day was everything
+            With her,happiness feels natural.
           </p>
         </div>
       </div>
@@ -338,7 +338,7 @@
      </div>
      <div class="mb-8 space-y-6">
       <h2 class="font-script text-5xl glow-text" id="proposal-name">Saumya</h2>
-      <p class="font-serif text-xl leading-relaxed" id="proposal-message">You are a radiant goddess who lights up my world with every smile. Your grace, your beauty, your spirit - everything about you is absolutely divine. Being near you feels like magic, and every moment with you is a blessing I treasure beyond words.</p>
+      <p class="font-serif text-xl leading-relaxed" id="proposal-message">You don’t even realize how much you mean to me. You’ve become my favorite part of every day, and honestly, life feels better with you in it.</p>
      </div>
      <div class="mb-12">
       <h1 class="font-script text-6xl md:text-7xl mb-8 heart-pulse glow-text" id="proposal-question">Will You Be My Valentine?</h1>
@@ -776,6 +776,7 @@
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c0e6e5cf2653f7f',t:'MTc2ODkxMDYzMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 
 </html>
+
 
 
 
