--- a/index.html
+++ b/index.html
@@ -358,13 +358,14 @@
     const defaultConfig = {
       her_name: "Saumya",
       envelope_text: "Click to open my heart",
-      letter_opening: "My Dearest Goddess",
-      letter_message: "From the moment I met you, my world became brighter. Your smile lights up my darkest days, your laughter is my favorite melody, and your love is my greatest treasure. Every second with you feels like a beautiful dream I never want to wake up from.",
-      photo1_caption: "Our first date - the moment I knew you were special",
-      photo2_caption: "The day I realized I was falling in love",
-      photo3_caption: "My favorite moment - your smile that day was everything",
-      photo4_caption: "Together forever - this is just the beginning",
-      proposal_message: "You are a radiant goddess who lights up my world with every smile. Your grace, your beauty, your spirit - everything about you is absolutely divine. Being near you feels like magic, and every moment with you is a blessing I treasure beyond words.",
+      letter_opening: "My Dear Princess",
+      letter_message: "In just a few months, you’ve become such an important part of my life. You complete me in ways I didn’t even realize I was missing...",
+      photo1_caption: "Our first meet - the moment I knew you were special",
+photo2_caption: "Our late night talks",
+photo3_caption: "With her, happiness feels natural",
+photo4_caption: "Together forever - this is just the beginning",
+
+      proposal_message: "You don’t even realize how much you mean to me. You’ve become my favorite part of every day, and honestly, life feels better with you in it.",
       proposal_question: "Will You Be My Valentine?",
       background_color: "#fdf4ff",
       card_color: "#ffffff",
@@ -776,6 +777,7 @@
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c0e6e5cf2653f7f',t:'MTc2ODkxMDYzMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 
 </html>
+
 
 
 
